--- a/React WEB/package.json
+++ b/React WEB/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.15.0",
+    "styled-components": "^6.1.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
